# Chess

./: .gitignore  CMakeLists.txt  README.md  chess.cpp  chess.h
Control/hdr/: AI.h  Algorithm.h  Entity.h  Human.h  ai.h  algorithm.h  control.h  human.h  stdcontrol.h
Control/src/: AI.cpp  Algorithm.cpp  Entity.cpp  Human.cpp
Controller/: controller.cpp  controller.h
Controller/Server/: server.cpp  server.h
Engine/hdr/: Board.h  Color.h  Instance.h  Piece.h  engine.h  stdengine.h
Engine/src/: Board.cpp  Color.cpp  Instance.cpp  Piece.cpp  stdengine.cpp
Game/: chess.cpp
Game/hdr/: Board.h  Color.h  Instance.h  Piece.h  config.h
Game/src/: Color.cpp  Instance.cpp  stdchess.cpp
Header/: Color.h  Instance.h  Piece.h  config.h  stdchess.h
Model/: model.cpp  model.h
Model/Game/: game.cpp  game.h
Model/Game/Field/: field.cpp  field.h
Model/Game/Piece/: piece.cpp  piece.h
Model/Game/Piece/Bishop/: bishop.cpp  bishop.h
Model/Game/Piece/King/: king.cpp  king.h
Model/Game/Piece/Knight/: knight.cpp  knight.h
Model/Game/Piece/Peasant/: peasant.cpp  peasant.h
Model/Game/Piece/Queen/: queen.cpp  queen.h
Model/Game/Piece/Rook/: rook.cpp  rook.h
Model/Player/: player.cpp  player.h
Model/Player/Human/: human.cpp  human.h
Model/Player/Machine/: machine.cpp  machine.h
Source/: Board.cpp  Color.cpp  Instance.cpp  Piece.cpp  stdchess.cpp
View/: view.cpp  view.h
